Home page orgenized to receive porfile image and projects tag temporary word wrap bug fixed

--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
 
 .main-content {
   display: grid;
-  grid-template-rows: repeat(13, auto);
+  grid-template-rows: 100vh repeat(12, auto);
 }
 
 a {
@@ -71,6 +71,12 @@ h2 {
   section {
     scroll-margin-top: 82px;
   }
+
+  .main-content {
+    display: grid;
+    grid-template-rows: repeat(13, auto);
+  }
+  
 
   .animate {
     transition: none;
