--- a/src/projects/Project.css
+++ b/src/projects/Project.css
@@ -1,5 +1,5 @@
 .project {
-    padding: 70px 200px 70px 200px;
+    padding: 50px 200px 70px 200px;
     color: #22242a;
 }
 
@@ -80,8 +80,9 @@
     width: 100%;
     height: 30px;
     border-radius: 20px;
-    font-size: 15px;
+    font-size: 0.8rem;
     font-weight: bold;
+    white-space: nowrap;
 }
 
 .project-span {
@@ -141,20 +142,17 @@
     object-fit: contain;
 }
 
-.git-project-link > img {
-    width: 100px;
-    height: auto;
-
-    /* TODO: Understand what to do with GitHub logo link */
-    /* display: none;  */
+.git-project-link-img {
+    width: 50px;
+    cursor: pointer;
 }
 
-.git-project-link > img:hover {
+.git-project-link-img:hover {
     transform: scale(1.1);
     transition: transform 0.1s;
 }
 
-.git-project-link > img:active {
+.git-project-link-img:active {
     transform: scale(0.9);
     transition: transform 0.1s;
 }
@@ -197,7 +195,7 @@
     }
 
     .project-tag {
-        font-size: 12px;
+        /* font-size: 13px; */
     }
 
     .right-to-left > .project-text, .left-to-right > .project-text {
@@ -222,5 +220,10 @@
     .project-media-container-left-to-right.is-hidden,
     .project-media-container-right-to-left.is-hidden {
         transform: translateX(0);
+    }
+
+    .git-project-link-img {
+        width: 30px;
+        cursor: pointer;
     }
 }
